--- a/Aula 15-02/home.html
+++ b/Aula 15-02/home.html
@@ -20,12 +20,12 @@
           <a class="nav-link" href="pag2.html">O que é?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pag3.html">Principais tipos</a>
+          <a class="nav-link" href="pag3.html">Calculadora</a>
         </li>
       </ul>
 
     <div id="login-container">
-      <h1>Seja bem-vindo! Venha conhecer um pouco sobre investimento financeiro!</h1>
+      <h1>Seja bem-vindo! Venha conhecer um pouco sobre juros compostos!</h1>
       <img class src="./img/gif3.gif" widht="370" height="240"> 
       <form action="pag2.html">
         <input type="submit" value="Entrar">
