--- a/Aula 15-02/pag2.html
+++ b/Aula 15-02/pag2.html
@@ -20,23 +20,32 @@
           <a class="nav-link" href="pag2.html">O que é?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pag3.html">Principais tipos</a>
+          <a class="nav-link" href="pag3.html">Calculadora</a>
         </li>
       </ul>
 
     <div id="login-container">
-      <h1>O que é um investimento financeiro?</h1>
+      <h1>O que é juros compostos e quais são as suas fórmulas?</h1>
       <h4>
-        Investimento financeiro é a aquisição de um ativo do mercado que tenha natureza estritamente financeira, isto é, ativos não-físicos e não-intangíveis, como ações, CBDs, Letras de Crédito, commodities, entre outros.
+        Os juros compostos são recorrentes nas relações comerciais, nas compras parceladas a longo prazo, nos investimentos, nos empréstimos e até mesmo no simples atraso do pagamento de contas. O juros pode ser um aliado ou um vilão. É importante dominar os fatores que influenciam o seu cálculo, que são o capital, a taxa de juros, o tempo e o montante.
       </h4>
       <h4>
-        São conhecidos como investimentos financeiros aqueles produtos e aplicações que você adquire em empresas do segmento financeiro, como: bancos, corretoras, financeiras, casas de câmbio, entre outras.
-        Os investimentos financeiros, além do mais, precisam estar lastreados em algo. Ser lastreado significa que o produto financeiro que você adquiriu tem valor assegurado ou garantido em algo além do que está escrito no papel. Em outras palavras, é "aquilo que está por trás" e que funciona como garantia que o ativo possa ser emitido e negociado no mercado financeiro.
+        Ao comparar o juros composto com o juros simples, precisamos entender que o primeiro é calculado sempre sobre o valor do exercício anterior, já o segundo é calculado sempre em cima do valor inicial. O juros composto terá maior crescimento com o passar do tempo, em comparação com o juros simples.
+O cálculo do juros composto é dado por esta fórmula:
+
+M = C (1 + i)t
+
+Cada uma dessas letras é um importante conceito da matemática financeira:
+
+Capital (C): é o primeiro valor investido. 
+Juros (J): é o valor de compensação para o rendimento.
+Taxa de juros (i): é a porcentagem cobrada em cima do capital a cada instante. Essa taxa pode ser ao dia (a.d.), ao mês (a.m.), ao bimestre (a.b.) ou ao ano (a.a.).
+Tempo (t): é o tempo em que o capital ficará aplicado.
+Montante (M): é o valor final da transação. O montante é calculado pela soma do capital com os juros — M = C + J.
+
       </h4>
-      <form action="home.html">
-        <input type="submit" value="voltar para o menu">
-        
-      </form>
+
+      
 
 
       </div>
